add JwtAuthenticationFilter